[javard][mvc]Added possibility to upload images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
 
+upload.path=/C:/Users/Viktoriia_Krutovskai/javard-mvc/uploads
+
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
