--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ upload.path=/C:/Users/Viktoriia_Krutovskai/javard-mvc/uploads
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=krutovskaiavi@yandex.ru
+spring.mail.password=55nya567
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
