--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=krutovskaiavi@yandex.ru
-spring.mail.password=55nya567
+spring.mail.username=//
+spring.mail.password=//
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
